// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelPane matches snapshot 1`] = `
<div
  className="css-class"
>
  <style
    type="text/css"
  >
    .label.label-label-1.selected{background-color:red}
    .label.label-label-1.selected:not(.no-hover):hover{background-color:white;border-color:red;color:red}
    .label.label-label-1:not(.selected){background-color:white;border-color:red;color:red}
    .label.label-label-1:not(.no-hover):hover{background-color:red;color:white}
    .label.label-label-2.selected{background-color:green}
    .label.label-label-2.selected:not(.no-hover):hover{background-color:white;border-color:green;color:green}
    .label.label-label-2:not(.selected){background-color:white;border-color:green;color:green}
    .label.label-label-2:not(.no-hover):hover{background-color:green;color:white}
  </style>
  <div
    className="label-selector-list"
  >
    <button
      className="button  label label-label-1 "
      id="label-1"
      onClick={[Function]}
      title="first label"
      type="button"
    >
      <span
        className="ion-pricetag"
      >
         
      </span>
      first
    </button>
    <button
      className="button  label label-label-2 "
      id="label-2"
      onClick={[Function]}
      title="second label"
      type="button"
    >
      <span
        className="ion-pricetag"
      >
         
      </span>
      second
    </button>
  </div>
</div>
`;

exports[`LabelPane not editable 1`] = `
<div
  className="css-class"
>
  <style
    type="text/css"
  >
    .label.label-label-1.selected{background-color:red}
    .label.label-label-1.selected:not(.no-hover):hover{background-color:white;border-color:red;color:red}
    .label.label-label-1:not(.selected){background-color:white;border-color:red;color:red}
    .label.label-label-1:not(.no-hover):hover{background-color:red;color:white}
    .label.label-label-2.selected{background-color:green}
    .label.label-label-2.selected:not(.no-hover):hover{background-color:white;border-color:green;color:green}
    .label.label-label-2:not(.selected){background-color:white;border-color:green;color:green}
    .label.label-label-2:not(.no-hover):hover{background-color:green;color:white}
  </style>
  <div
    className="label-selector-list"
  >
    <span
      className="label label-label-1 selected"
      id="label-1"
      title="first label"
    >
      <span
        className="ion-pricetag"
      >
         
      </span>
      first
    </span>
    <span
      className="label label-label-2 "
      id="label-2"
      title="second label"
    >
      <span
        className="ion-pricetag"
      >
         
      </span>
      second
    </span>
  </div>
</div>
`;

exports[`LabelPane sorts labels 1`] = `
<div
  className=""
>
  <style
    type="text/css"
  >
    .label.label-id-0.selected{background-color:undefined}
    .label.label-id-0.selected:not(.no-hover):hover{background-color:white;border-color:undefined;color:undefined}
    .label.label-id-0:not(.selected){background-color:white;border-color:undefined;color:undefined}
    .label.label-id-0:not(.no-hover):hover{background-color:black;color:white}
    .label.label-id-4.selected{background-color:undefined}
    .label.label-id-4.selected:not(.no-hover):hover{background-color:white;border-color:undefined;color:undefined}
    .label.label-id-4:not(.selected){background-color:white;border-color:undefined;color:undefined}
    .label.label-id-4:not(.no-hover):hover{background-color:black;color:white}
    .label.label-id-3.selected{background-color:undefined}
    .label.label-id-3.selected:not(.no-hover):hover{background-color:white;border-color:undefined;color:undefined}
    .label.label-id-3:not(.selected){background-color:white;border-color:undefined;color:undefined}
    .label.label-id-3:not(.no-hover):hover{background-color:black;color:white}
    .label.label-id-2.selected{background-color:undefined}
    .label.label-id-2.selected:not(.no-hover):hover{background-color:white;border-color:undefined;color:undefined}
    .label.label-id-2:not(.selected){background-color:white;border-color:undefined;color:undefined}
    .label.label-id-2:not(.no-hover):hover{background-color:black;color:white}
    .label.label-id-1.selected{background-color:undefined}
    .label.label-id-1.selected:not(.no-hover):hover{background-color:white;border-color:undefined;color:undefined}
    .label.label-id-1:not(.selected){background-color:white;border-color:undefined;color:undefined}
    .label.label-id-1:not(.no-hover):hover{background-color:black;color:white}
  </style>
  <div
    className="label-selector-list"
  >
    <button
      className="button  label label-id-0 "
      id="id-0"
      onClick={[Function]}
      title={undefined}
      type="button"
    >
      <span
        className="ion-pricetag"
      >
         
      </span>
      featured
    </button>
    <button
      className="button  label label-id-4 "
      id="id-4"
      onClick={[Function]}
      title={undefined}
      type="button"
    >
      <span
        className="ion-pricetag"
      >
         
      </span>
      a-label-3
    </button>
    <button
      className="button  label label-id-3 "
      id="id-3"
      onClick={[Function]}
      title={undefined}
      type="button"
    >
      <span
        className="ion-pricetag"
      >
         
      </span>
      a-label-4
    </button>
    <button
      className="button  label label-id-2 "
      id="id-2"
      onClick={[Function]}
      title={undefined}
      type="button"
    >
      <span
        className="ion-pricetag"
      >
         
      </span>
      a-label-1
    </button>
    <button
      className="button  label label-id-1 "
      id="id-1"
      onClick={[Function]}
      title={undefined}
      type="button"
    >
      <span
        className="ion-pricetag"
      >
         
      </span>
      a-label-2
    </button>
  </div>
</div>
`;

exports[`LabelPane with selected labels 1`] = `
<div
  className="css-class"
>
  <style
    type="text/css"
  >
    .label.label-label-1.selected{background-color:red}
    .label.label-label-1.selected:not(.no-hover):hover{background-color:white;border-color:red;color:red}
    .label.label-label-1:not(.selected){background-color:white;border-color:red;color:red}
    .label.label-label-1:not(.no-hover):hover{background-color:red;color:white}
    .label.label-label-2.selected{background-color:green}
    .label.label-label-2.selected:not(.no-hover):hover{background-color:white;border-color:green;color:green}
    .label.label-label-2:not(.selected){background-color:white;border-color:green;color:green}
    .label.label-label-2:not(.no-hover):hover{background-color:green;color:white}
  </style>
  <div
    className="label-selector-list"
  >
    <button
      className="button  label label-label-1 selected"
      id="label-1"
      onClick={[Function]}
      title="first label"
      type="button"
    >
      <span
        className="ion-pricetag"
      >
         
      </span>
      first
    </button>
    <button
      className="button  label label-label-2 "
      id="label-2"
      onClick={[Function]}
      title="second label"
      type="button"
    >
      <span
        className="ion-pricetag"
      >
         
      </span>
      second
    </button>
  </div>
</div>
`;
